--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body{
+  background-color: #EEF5DB;
+}
+h1, h2, h3{
+  background-color: #D3D3D3;
+}
 /*header*/
 header>h1{
   text-align: center;
@@ -38,6 +44,10 @@ aside{
 float:right;
 width:20vw;
 display:inline-block;
+margin top: 10px
+}
+article{
+  margin:6px;
 }
 /*main*/
 
@@ -46,5 +56,8 @@ footer{
   width:100%;
   position:fixed;
 }
-footer>
+footer > nav > ul > li {
+  display: inline-block;
+
+}
 /*footer*/
